--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,8 @@ body {
   text-align: center;
   padding: 0;
   margin: 0;
-  font-family: 'Lobster' sans-serif,
+  font-family: 'Poppins', sans-serif;
+  text-shadow: 1px 1px rgb(125, 125, 125);
   /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
   
