--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   text-align: center;
@@ -7,7 +11,10 @@ body {
   text-shadow: 1px 1px rgb(125, 125, 125);
   /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
-  
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 a {
@@ -37,6 +44,12 @@ a {
 
 }
 
+/* @layer base {
+  html {
+    @apply scroll-smooth;
+  }
+} */
+
 /* media queries go here in global */
 @media (prefers-color-scheme: dark) {
   html {
@@ -50,7 +63,3 @@ a {
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Poiret+One&display=swap');
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
